# easyexcel-rs

./: .gitignore  Cargo.toml  MIGRATION_COMPARISON_REPORT.md  README.md  README_CN.md
crates/easyexcel/: Cargo.toml
crates/easyexcel-core/: Cargo.toml
crates/easyexcel-core/src/: analysis_context.rs  anchor_type.rs  cell_extra.rs  cell_value.rs  client_anchor_data.rs  comment_data.rs  convert_context.rs  converter.rs  converter_registry.rs  converters.rs  coordinate_data.rs  csv_charset.rs  custom_read_object.rs  dynamic_row.rs  dynamic_value.rs  empty.rs  enum_boolean.rs  enum_byte_order_mark.rs  enum_cache_location.rs  enum_cell_data_type.rs  enum_cell_extra_type.rs  enum_head_kind.rs  enum_holder.rs  enum_numeric_cell_type.rs  enum_read_default_return.rs  enum_row_type.rs  enum_write_direction.rs  enum_write_last_row.rs  enum_write_template_analysis_cell_type.rs  enum_write_type.rs  enums.rs  excel_border_style.rs  excel_cell_style.rs  excel_color.rs  excel_column.rs  excel_data_format.rs  excel_download_error_body.rs  excel_error.rs  excel_fill_pattern.rs  excel_font_script.rs  (+42 more)
crates/easyexcel-core/src/annotation/: date_time_format.rs  excel_comment.rs  excel_conditional.rs  excel_data_validation.rs  excel_filter.rs  excel_formula.rs  excel_hyperlink.rs  excel_ignore.rs  excel_ignore_unannotated.rs  excel_image.rs  excel_property.rs  mod.rs  number_format.rs
crates/easyexcel-core/src/constant/: builtin_formats.rs  easy_excel_constants.rs  excel_xml_constants.rs  mod.rs  order_constant.rs
crates/easyexcel-core/src/context/: write_context_impl.rs
crates/easyexcel-core/src/converter/: auto_converter.rs  boolean_support.rs  converter_key_build.rs  converter_trait.rs  date_support.rs  default_converter_loader.rs  mod.rs  nullable_object_converter.rs  number_support.rs
crates/easyexcel-core/src/converters/: converter.rs
crates/easyexcel-core/src/enums/: boolean_enum.rs  byte_order_mark_enum.rs  cache_location_enum.rs  cell_data_type_enum.rs  cell_extra_type_enum.rs  head_kind_enum.rs  holder_enum.rs  mod.rs  numeric_cell_type_enum.rs  read_default_return_enum.rs  row_type_enum.rs  write_direction_enum.rs  write_last_row_type_enum.rs  write_template_analysis_cell_type_enum.rs  write_type_enum.rs
crates/easyexcel-core/src/event/: abstract_ignore_exception_read_listener.rs  analysis_event_listener.rs  handler.rs  listener.rs  mod.rs  not_repeat_executor.rs  order.rs  sync_read_listener.rs
crates/easyexcel-core/src/exception/: excel_analysis_exception.rs  excel_analysis_stop_exception.rs  excel_analysis_stop_sheet_exception.rs  excel_common_exception.rs  excel_data_convert_exception.rs  excel_generate_exception.rs  excel_runtime_exception.rs  excel_write_data_convert_exception.rs  mod.rs
crates/easyexcel-core/src/metadata/: abstract_cell.rs  abstract_holder.rs  abstract_parameter_builder.rs  basic_parameter.rs  cell.rs  cell_range.rs  configuration_holder.rs  data.rs  field_cache.rs  field_wrapper.rs  font.rs  global_configuration.rs  head.rs  holder.rs  mod.rs  null_object.rs  tests.rs
crates/easyexcel-core/src/support/: empty.rs  excel_type_enum.rs  mod.rs
crates/easyexcel-core/src/util/: bean_map_utils.rs  boolean_utils.rs  cell_editor.rs  class_utils.rs  converter_utils.rs  date_utils.rs  easy_excel_temp_file_creation_strategy.rs  excel_utils.rs  field_utils.rs  file_type_utils.rs  file_utils.rs  int_utils.rs  io_utils.rs  list_utils.rs  map_utils.rs  member_utils.rs  mod.rs  number_data_formatter_utils.rs  number_utils.rs  poi_utils.rs  position_utils.rs  sheet_utils.rs  string_utils.rs  style_util.rs  validate.rs  work_book_util.rs  write_handler_utils.rs
crates/easyexcel-demo/easyexcel-demo-actix/: Cargo.toml
crates/easyexcel-demo/easyexcel-demo-actix/src/: main.rs
crates/easyexcel-demo/easyexcel-demo-axum/: Cargo.toml
crates/easyexcel-demo/easyexcel-demo-axum/src/: main.rs
crates/easyexcel-demo/easyexcel-demo-fill/: Cargo.toml
crates/easyexcel-demo/easyexcel-demo-fill/src/: main.rs
crates/easyexcel-demo/easyexcel-demo-read/: Cargo.toml
crates/easyexcel-demo/easyexcel-demo-read/src/: main.rs
crates/easyexcel-demo/easyexcel-demo-write/: Cargo.toml
crates/easyexcel-demo/easyexcel-demo-write/src/: main.rs
crates/easyexcel-derive/: Cargo.toml
crates/easyexcel-derive/src/: implementation.rs  lib.rs  tests.rs
crates/easyexcel-macro/: Cargo.toml
crates/easyexcel-macro/src/: tests.rs
crates/easyexcel-reader/: Cargo.toml
crates/easyexcel-reader/src/: excel_reader.rs  global_configuration.rs  lib.rs  locale.rs  locale_generated.rs  missing_tests.rs  read.rs  read_cache.rs  tests.rs  xls_display.rs  xlsx_rows.rs
crates/easyexcel-reader/src/analysis/: mod.rs  (+3 more)
crates/easyexcel-template/: Cargo.toml
crates/easyexcel-template/src/: builder_fill_executor.rs  lib.rs  tests.rs
crates/easyexcel-web/easyexcel-web-actix/: Cargo.toml
crates/easyexcel-web/easyexcel-web-axum/: Cargo.toml
crates/easyexcel-writer/: Cargo.toml
crates/easyexcel-writer/src/: excel_builder.rs  excel_writer.rs  global_configuration.rs  gzip_spill.rs  lib.rs  missing_tests.rs  template_write.rs  tests.rs  write.rs
crates/easyexcel/examples/: million_rows.rs
crates/easyexcel/src/: easy_excel.rs  easy_excel_factory.rs  excel_builder.rs  lib.rs  tests.rs
crates/easyexcel/tests/: annotation_mapping_tests.rs  bom_data_tests.rs  codegraph_phaseE_metadata_1to1_tests.rs  core_annotation_style_handler_1to1_tests.rs  core_converter_extra_compat_1to1_tests.rs  core_fill_1to1_tests.rs  core_phase1_annotations_1to1_tests.rs  core_phase2_handlers_1to1_tests.rs  core_phase3_advanced_features_1to1_tests.rs  core_phase4_write_table_1to1_tests.rs  core_phase5_xls_features_1to1_tests.rs  core_simple_sort_head_1to1_tests.rs  cross_validation.rs  demo_1to1_tests.rs  demo_parity_tests.rs  demo_write_extra_tests.rs  java_date_converter_tests.rs  java_full_parity_tests.rs  java_golden_tests.rs  java_parity_tests.rs  nullable_converter_tests.rs  number_format_converter_tests.rs  round_trip.rs  temp_contract_tests.rs  temp_extra_contract_tests.rs  temp_fill_contract_tests.rs
(+565 files in other folders)
