[workspace]
members = [
    "crates/easyexcel",
    "crates/easyexcel-core",
    "crates/easyexcel-derive",
    "crates/easyexcel-reader",
    "crates/easyexcel-template",
    "crates/easyexcel-writer",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/hiwepy/easyexcel-rs"

[workspace.dependencies]
base64 = "0.22.1"
bigdecimal = "0.4.10"
calamine = { version = "0.36.0", features = ["chrono"] }
cfb = "0.14.0"
chrono = { version = "0.4.41", default-features = false, features = ["std"] }
csv = "1.4.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
flate2 = "1.1.9"
md-5 = "0.10"
ms-offcrypto-writer = "1.0.7"
num-bigint = "0.4.6"
office-crypto = "0.2.0"
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0.103"
pure-rust-locales = "0.8.2"
quick-xml = "0.41.0"
quote = "1.0.40"
rand = "0.9.2"
rust_xlsxwriter = { version = "0.96.0", features = ["chrono", "constant_memory"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ssfmt = { version = "0.1.2", default-features = false }
sys-locale = "0.3.2"
syn = { version = "2.0.104", features = ["full"] }
tempfile = "3.20.0"
thiserror = "2.0.18"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
url = "2.5.8"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
