[package]
name = "easyexcel-core"
description = "Core types and extension points for easyexcel-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
thiserror.workspace = true

[lints]
workspace = true

