[package]
name = "easyexcel-macro"
description = "Procedural macros for the easyexcel-rust crate (mirrors cn.hutool.core.annotation)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
easyexcel-core = { path = "../easyexcel-core" }

[lints]
workspace = true