[package]
name = "easyexcel-reader"
description = "Streaming readers for easyexcel-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
calamine.workspace = true
csv.workspace = true
easyexcel-core = { path = "../easyexcel-core" }
office-crypto.workspace = true

[dev-dependencies]
base64.workspace = true
flate2.workspace = true
rust_xlsxwriter.workspace = true
tempfile.workspace = true
zip.workspace = true

[lints]
workspace = true
