[package]
name = "easyexcel-template"
description = "OOXML template filling for easyexcel-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
easyexcel-core = { path = "../easyexcel-core" }
zip.workspace = true

[dev-dependencies]
calamine.workspace = true
rust_xlsxwriter.workspace = true
tempfile.workspace = true

[lints]
workspace = true
