[package]
name = "easyexcel-template"
description = "OOXML template filling for easyexcel-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bigdecimal.workspace = true
chrono.workspace = true
easyexcel-core = { path = "../easyexcel-core" }
easyexcel-writer = { path = "../easyexcel-writer" }
num-bigint.workspace = true
zip.workspace = true

[dev-dependencies]
base64.workspace = true
calamine.workspace = true
flate2.workspace = true
rust_xlsxwriter.workspace = true
tempfile.workspace = true

[lints]
workspace = true
