[package]
name = "easyexcel-writer"
description = "Streaming writers for easyexcel-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bigdecimal.workspace = true
easyexcel-core = { path = "../easyexcel-core" }
csv.workspace = true
encoding_rs.workspace = true
ms-offcrypto-writer.workspace = true
rand.workspace = true
rust_xlsxwriter.workspace = true

[dev-dependencies]
calamine.workspace = true
chrono.workspace = true
tempfile.workspace = true
zip.workspace = true

[lints]
workspace = true
