[package]
name = "easyexcel"
description = "A Rust implementation of the Alibaba EasyExcel programming model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
easyexcel-core = { path = "../easyexcel-core" }
easyexcel-derive = { path = "../easyexcel-derive" }
easyexcel-reader = { path = "../easyexcel-reader" }
easyexcel-template = { path = "../easyexcel-template" }
easyexcel-writer = { path = "../easyexcel-writer" }

[dev-dependencies]
bigdecimal.workspace = true
calamine.workspace = true
chrono.workspace = true
tempfile.workspace = true
zip.workspace = true

[lints]
workspace = true
