[package]
name = "easyexcel-demo-actix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Actix-web demo mirroring Java WebTest"
repository.workspace = true

[[bin]]
name = "easyexcel-demo-actix"
path = "src/main.rs"

[dependencies]
easyexcel = { workspace = true }
easyexcel-core = { workspace = true }
easyexcel-web-actix = { path = "../../easyexcel-web/easyexcel-web-actix" }
actix-web = { workspace = true }
actix-multipart = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["std", "clock"] }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }

[lints]
workspace = true
