[package]
name = "easyexcel-demo-write"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Simple XLSX/CSV write demo for easyexcel-rs"
repository.workspace = true

[[bin]]
name = "easyexcel-demo-write"
path = "src/main.rs"

[dependencies]
easyexcel = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["std", "clock"] }

[lints]
workspace = true
